fix: don't make it too wide

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card {
